# rbackup2

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.yaml
doc/: 00-architecture-overview.md  01-database-schema.md  02-implementation-phases.md  03-relica-compatibility.md  relica-account-info.json
migrations/: 20250101000001_initial_schema.sql  20250101000002_initial_data.sql  20250101000003_views.sql
src/: backup.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  scheduler.rs
src/backup/: output.rs  restic.rs
src/config/: local.rs  remote.rs
src/db/: models.rs  queries.rs
src/scheduler/: executor.rs  missed_runs.rs  schedule_calc.rs
testdata/restic/: README.md
tests/: database_tests.rs  restic_integration_tests.rs
