[package]
name = "rbackup2"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cron = "0.13"
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.19", features = ["serde", "v4"] }
which = "7.0"

[dev-dependencies]
tempfile = "3.14"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
